# class_0

./: .cirrus.yml  CMakeLists.txt  README.md  appveyor.yml
data/: test_data.input
include/: simulation.hpp
include/simulation/: factorial.hpp  simulation.hpp
src/: factorial.cpp  simulation.cpp  simulation_main.cpp  sum_number.cpp
test/: test.cpp
